--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -3,51 +3,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!pip install pandas\n",
     "!pip install numpy\n",
     "!pip install faiss-cpu\n",
     "!pip install sentence-transformers"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import faiss\n",
     "from sentence_transformers import SentenceTransformer"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Embeddings/Models explicação\n",
+    "\n",
+    "[https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526](link)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model = SentenceTransformer('all-mpnet-base-v2')\n",
     "data_path = \"../data\""
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# SentenceTransformers\n",
     "SentenceTransformers is a Python framework for state-of-the-art sentence, text and image embeddings. The initial work is described in our paper Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks.\n",
     "\n",
     "# Faiss\n",
     "Faiss is a library for efficient similarity search and clustering of dense vectors. It contains algorithms that search in sets of vectors of any size, up to ones that possibly do not fit in RAM. It also contains supporting code for evaluation and parameter tuning."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def generate_index(data):\n",
     "    encoded_data = model.encode(data)\n",
@@ -64,47 +75,45 @@
     "    k = 5\n",
     "    top_k = index.search(query_vector, k)\n",
     "    return top_k[1].tolist()[0]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = pd.read_csv(f'{data_path}/data_file.csv', sep=\"\\t\")\n",
     "data = df[\"col\"]\n",
     "\n",
     "generate_index(data)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "query = \"string\"\n",
     "\n",
     "search(query)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "37c2e2033182135ea93565dfd32c9353ddc5f689de9bec5408f95769190ebe73"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('.venv': venv)",
+   "name": "python3"
+  },
   "language_info": {
    "name": "python",
    "version": "3.9.7"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.7 64-bit ('.venv': venv)"
-  },
-  "interpreter": {
-   "hash": "37c2e2033182135ea93565dfd32c9353ddc5f689de9bec5408f95769190ebe73"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
