--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -30,7 +30,8 @@
    "source": [
     "# Embeddings/Models explicação\n",
     "\n",
-    "[https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526](link)"
+    "- [https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526](https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526)\n",
+    "- [https://goodboychan.github.io/python/datacamp/natural_language_processing/2020/07/17/04-TF-IDF-and-similarity-scores.html](https://goodboychan.github.io/python/datacamp/natural_language_processing/2020/07/17/04-TF-IDF-and-similarity-scores.html)"
    ]
   },
   {
@@ -98,6 +99,16 @@
     "query = \"string\"\n",
     "\n",
     "search(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discussão dos Resultados\n",
+    "\n",
+    "- Comparação de metodos e modelos\n",
+    "- Criar gráficos"
    ]
   }
  ],
