--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -140,12 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = SentenceTransformer('all-mpnet-base-v2')\n",
-    "data_path = \"../data\""
+    "data_path = \"./data\""
    ]
   },
   {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,14 +184,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cecilio/Projetos/ufsj-Data-Science/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (4,5) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>titleType</th>\n",
+       "      <th>primaryTitle</th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>isAdult</th>\n",
+       "      <th>startYear</th>\n",
+       "      <th>endYear</th>\n",
+       "      <th>runtimeMinutes</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0000001</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1894</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Documentary,Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0000002</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Le clown et ses chiens</td>\n",
+       "      <td>Le clown et ses chiens</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Animation,Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0000003</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Pauvre Pierrot</td>\n",
+       "      <td>Pauvre Pierrot</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Animation,Comedy,Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0000004</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Un bon bock</td>\n",
+       "      <td>Un bon bock</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Animation,Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1893</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Comedy,Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8457010</th>\n",
+       "      <td>tt9916848</td>\n",
+       "      <td>tvEpisode</td>\n",
+       "      <td>Episode #3.17</td>\n",
+       "      <td>Episode #3.17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>Action,Drama,Family</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8457011</th>\n",
+       "      <td>tt9916850</td>\n",
+       "      <td>tvEpisode</td>\n",
+       "      <td>Episode #3.19</td>\n",
+       "      <td>Episode #3.19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>Action,Drama,Family</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8457012</th>\n",
+       "      <td>tt9916852</td>\n",
+       "      <td>tvEpisode</td>\n",
+       "      <td>Episode #3.20</td>\n",
+       "      <td>Episode #3.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>Action,Drama,Family</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8457013</th>\n",
+       "      <td>tt9916856</td>\n",
+       "      <td>short</td>\n",
+       "      <td>The Wind</td>\n",
+       "      <td>The Wind</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Short</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8457014</th>\n",
+       "      <td>tt9916880</td>\n",
+       "      <td>tvEpisode</td>\n",
+       "      <td>Horrid Henry Knows It All</td>\n",
+       "      <td>Horrid Henry Knows It All</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Adventure,Animation,Comedy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8457015 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            tconst  titleType               primaryTitle  \\\n",
+       "0        tt0000001      short                 Carmencita   \n",
+       "1        tt0000002      short     Le clown et ses chiens   \n",
+       "2        tt0000003      short             Pauvre Pierrot   \n",
+       "3        tt0000004      short                Un bon bock   \n",
+       "4        tt0000005      short           Blacksmith Scene   \n",
+       "...            ...        ...                        ...   \n",
+       "8457010  tt9916848  tvEpisode              Episode #3.17   \n",
+       "8457011  tt9916850  tvEpisode              Episode #3.19   \n",
+       "8457012  tt9916852  tvEpisode              Episode #3.20   \n",
+       "8457013  tt9916856      short                   The Wind   \n",
+       "8457014  tt9916880  tvEpisode  Horrid Henry Knows It All   \n",
+       "\n",
+       "                     originalTitle isAdult startYear endYear runtimeMinutes  \\\n",
+       "0                       Carmencita       0      1894      \\N              1   \n",
+       "1           Le clown et ses chiens       0      1892      \\N              5   \n",
+       "2                   Pauvre Pierrot       0      1892      \\N              4   \n",
+       "3                      Un bon bock       0      1892      \\N             12   \n",
+       "4                 Blacksmith Scene       0      1893      \\N              1   \n",
+       "...                            ...     ...       ...     ...            ...   \n",
+       "8457010              Episode #3.17       0      2010      \\N             \\N   \n",
+       "8457011              Episode #3.19       0      2010      \\N             \\N   \n",
+       "8457012              Episode #3.20       0      2010      \\N             \\N   \n",
+       "8457013                   The Wind       0      2015      \\N             27   \n",
+       "8457014  Horrid Henry Knows It All       0      2014      \\N             10   \n",
+       "\n",
+       "                             genres  \n",
+       "0                 Documentary,Short  \n",
+       "1                   Animation,Short  \n",
+       "2          Animation,Comedy,Romance  \n",
+       "3                   Animation,Short  \n",
+       "4                      Comedy,Short  \n",
+       "...                             ...  \n",
+       "8457010         Action,Drama,Family  \n",
+       "8457011         Action,Drama,Family  \n",
+       "8457012         Action,Drama,Family  \n",
+       "8457013                       Short  \n",
+       "8457014  Adventure,Animation,Comedy  \n",
+       "\n",
+       "[8457015 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(f'{data_path}/data.tsv', sep=\"\\t\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre Processamento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(f'{data_path}/data_file.csv', sep=\"\\t\")\n",
-    "data = df[\"col\"]\n",
-    "\n",
-    "generate_index(data)"
+    "generate_index(df['originalTitle'])"
    ]
   },
   {
@@ -200,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"string\"\n",
+    "query = \"Ferris\"\n",
     "\n",
     "search(query)"
    ]
