--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -826,20 +826,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[11819, 80360, 76866, 58707, 13445]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def search(query):\n",
     "    index = faiss.read_index(f'{data_path}/sentences.index')\n",
@@ -848,8 +837,123 @@
     "    top_k = index.search(query_vector, k)\n",
     "    return top_k[1].tolist()[0]\n",
     "\n",
-    "query = \"Ferris\"\n",
-    "search(query)"
+    "query = \"Space Fights with no sound\"\n",
+    "results = search(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>titleType</th>\n",
+       "      <th>primaryTitle</th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>startYear</th>\n",
+       "      <th>runtimeMinutes</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>47639</th>\n",
+       "      <td>tt7174122</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Violent Space</td>\n",
+       "      <td>Violent Space</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72844</th>\n",
+       "      <td>tt4782322</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Fighting the Sky</td>\n",
+       "      <td>Fighting the Sky</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Action,Sci-Fi,Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20555</th>\n",
+       "      <td>tt2328745</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Space Warriors</td>\n",
+       "      <td>Space Warriors</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Adventure,Family</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1791</th>\n",
+       "      <td>tt14371272</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Sound and Silence</td>\n",
+       "      <td>Sound and Silence</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44337</th>\n",
+       "      <td>tt6543082</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Space Race</td>\n",
+       "      <td>Space Race</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Animation</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           tconst titleType       primaryTitle      originalTitle  startYear  \\\n",
+       "47639   tt7174122     movie      Violent Space      Violent Space       2018   \n",
+       "72844   tt4782322     movie   Fighting the Sky   Fighting the Sky       2018   \n",
+       "20555   tt2328745     movie     Space Warriors     Space Warriors       2013   \n",
+       "1791   tt14371272     movie  Sound and Silence  Sound and Silence       2020   \n",
+       "44337   tt6543082     movie         Space Race         Space Race       2013   \n",
+       "\n",
+       "      runtimeMinutes                  genres  \n",
+       "47639             83                Thriller  \n",
+       "72844             97  Action,Sci-Fi,Thriller  \n",
+       "20555             93        Adventure,Family  \n",
+       "1791             NaN                   Drama  \n",
+       "44337            NaN               Animation  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[results]"
    ]
   },
   {
