--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -33,6 +33,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introdução\n",
+    "\n",
+    "## Busca Semantica\n",
+    "\n",
+    "O objetivo da busca semântica é melhorar a precisão dos resultados ao entender a intenção/contexto da busca utilizando outros fatores que consideram mais do que apenas o casamento de palavras-chaves."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Embeddings/Models explicação\n",
     "\n",
     "- [https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526](https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526)\n",
