--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -37,19 +37,13 @@
     "\n",
     "## Busca Semantica\n",
     "\n",
-    "O objetivo da busca semântica é melhorar a precisão dos resultados ao entender a intenção/contexto da busca utilizando outros fatores que consideram mais do que apenas o casamento de palavras-chaves."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Embeddings/Models explicação\n",
+    "A busca semântica busca melhorar a precisão dos resultados, entendendo o conteúdo da consulta na pesquisa. Em contraste com os mecanismos de pesquisa tradicionais, que só encontram documentos com base em correspondências lexicais, a pesquisa semântica também pode encontrar sinônimos.\n",
     "\n",
-    "- [https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526](https://towardsdatascience.com/neural-network-embeddings-explained-4d028e6f0526)\n",
-    "- [https://goodboychan.github.io/python/datacamp/natural_language_processing/2020/07/17/04-TF-IDF-and-similarity-scores.html](https://goodboychan.github.io/python/datacamp/natural_language_processing/2020/07/17/04-TF-IDF-and-similarity-scores.html)\n",
-    "- [https://www.sbert.net/docs/pretrained_models.html](https://www.sbert.net/docs/pretrained_models.html)\n",
-    "- [https://github.com/facebookresearch/faiss/wiki/Faiss-indexes](https://github.com/facebookresearch/faiss/wiki/Faiss-indexes)"
+    "## Como é feito?\n",
+    "\n",
+    "A ideia por trás da pesquisa semântica é incorporar todas as entradas do corpus (coleção de dados), sejam sentenças, parágrafos ou documentos, em um espaço vetorial. No momento da pesquisa, a consulta é inserida no mesmo espaço vetorial e os embeddings mais próximos do seu corpus são encontrados. Essas entradas devem ter uma alta sobreposição semântica com a consulta.\n",
+    "\n",
+    "![img01](./img/SemanticSearch.png)"
    ]
   },
   {
