--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -33,6 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"background-color:white;\">\n",
+    "\n",
     "# Introdução\n",
     "\n",
     "## Busca Semantica\n",
@@ -41,17 +43,36 @@
     "\n",
     "## Como é feito?\n",
     "\n",
-    "A ideia por trás da pesquisa semântica é incorporar todas as entradas do corpus (coleção de dados), sejam sentenças, parágrafos ou documentos, em um espaço vetorial. No momento da pesquisa, a consulta é inserida no mesmo espaço vetorial e os embeddings mais próximos do seu corpus são encontrados. Essas entradas devem ter uma alta sobreposição semântica com a consulta.\n",
+    "A ideia por trás da pesquisa semântica é incorporar todas as entradas do corpus (a.k.a. coleção de dados), sejam sentenças, parágrafos ou documentos, em um espaço vetorial. No momento da pesquisa, a consulta é inserida no mesmo espaço vetorial e os embeddings mais próximos do seu corpus são encontrados. Essas entradas devem ter uma alta sobreposição semântica com a consulta.\n",
     "\n",
-    "![img01](./img/SemanticSearch.png)"
+    "![img01](./img/SemanticSearch.png)\n",
+    "\n",
+    "### O que é Word Embedding?\n",
+    "\n",
+    "Inicialmente, é preciso transformar o texto em uma informação numérica, mais especificamente um vetor. Existem algumas formas de se fazer isso, uma delas é definir cada palavra através de escalas representando alguma informação sobre essa palavra.\n",
+    "\n",
+    "![img02](./img/emb01.png)\n",
+    "![img03](./img/emb02.png)\n",
+    "\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.73 s, sys: 559 ms, total: 2.29 s\n",
+      "Wall time: 12.2 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "model = SentenceTransformer('all-mpnet-base-v2')"
    ]
   },
