--- a/tool_presentation.ipynb
+++ b/tool_presentation.ipynb
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-17 17:12:19.397866: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2021-11-17 17:12:19.397898: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import pandas as pd\n",
@@ -33,15 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:white;\">\n",
-    "\n",
     "# Introdução\n",
     "\n",
-    "## Busca Semantica\n",
+    "### Busca Semantica\n",
     "\n",
     "A busca semântica busca melhorar a precisão dos resultados, entendendo o conteúdo da consulta na pesquisa. Em contraste com os mecanismos de pesquisa tradicionais, que só encontram documentos com base em correspondências lexicais, a pesquisa semântica também pode encontrar sinônimos.\n",
     "\n",
-    "## Como é feito?\n",
+    "### Como é feito?\n",
     "\n",
     "A ideia por trás da pesquisa semântica é incorporar todas as entradas do corpus (a.k.a. coleção de dados), sejam sentenças, parágrafos ou documentos, em um espaço vetorial. No momento da pesquisa, a consulta é inserida no mesmo espaço vetorial e os embeddings mais próximos do seu corpus são encontrados. Essas entradas devem ter uma alta sobreposição semântica com a consulta.\n",
     "\n",
@@ -52,28 +59,7 @@
     "Inicialmente, é preciso transformar o texto em uma informação numérica, mais especificamente um vetor. Existem algumas formas de se fazer isso, uma delas é definir cada palavra através de escalas representando alguma informação sobre essa palavra.\n",
     "\n",
     "![img02](./img/emb01.png)\n",
-    "![img03](./img/emb02.png)\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.73 s, sys: 559 ms, total: 2.29 s\n",
-      "Wall time: 12.2 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "model = SentenceTransformer('all-mpnet-base-v2')"
+    "![img03](./img/emb02.png)"
    ]
   },
   {
@@ -81,10 +67,27 @@
    "metadata": {},
    "source": [
     "# SentenceTransformers\n",
-    "SentenceTransformers is a Python framework for state-of-the-art sentence, text and image embeddings. The initial work is described in our paper Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks.\n",
     "\n",
-    "# Faiss\n",
-    "Faiss is a library for efficient similarity search and clustering of dense vectors. It contains algorithms that search in sets of vectors of any size, up to ones that possibly do not fit in RAM. It also contains supporting code for evaluation and parameter tuning."
+    "SentenceTransformers is a Python framework for state-of-the-art sentence, text and image embeddings. The initial work is described in our paper Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.88 s, sys: 649 ms, total: 2.53 s\n",
+      "Wall time: 12.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "model = SentenceTransformer('all-mpnet-base-v2')"
    ]
   },
   {
@@ -790,39 +793,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gerando o index"
+    "# Faiss (Gerando o index)\n",
+    "\n",
+    "Facebook AI Similarity Search (Faiss), permite uma busca eficiente por similaridade. Dado um conjunto de vetores, podemos indexá-los usando Faiss - então usando outro vetor (o vetor de consulta ), procuramos os vetores mais semelhantes dentro do índice. O Faiss não apenas permite construir um índice e pesquisar, mas também acelera tempos de pesquisa a níveis melhores de desempenho por neio do uso da GPU.\n",
+    "\n",
+    "![img02](./img/similarity-search-indexes3.png)\n",
+    "![img03](./img/similarity-search-indexes4.png)\n",
+    "\n",
+    "- IndexFlatL2 usa a distancia Euclediana;\n",
+    "- IndexFlatIP utiliza o produto da distancia."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(f'{data_path}/data_pre.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 10min 20s, sys: 4.84 s, total: 10min 25s\n",
+      "Wall time: 10min 25s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sentences = [df.originalTitle[x] for x in range(df.shape[0])]\n",
+    "sentence_embeddings = model.encode(sentences)\n",
+    "sentence_embeddings = np.asarray(sentence_embeddings.astype('float32'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['See You',\n",
-       " 'Gokula Krishna',\n",
-       " 'The Corsicana Eight',\n",
-       " 'Helena from the Wedding',\n",
-       " 'No Limit Kids: Much Ado About Middle School',\n",
-       " 'Dispatch',\n",
-       " 'The Sisters Summon',\n",
-       " 'Patrol Men',\n",
-       " \"Lilly's Light: The Movie\",\n",
-       " 'Vahshiy']"
+       "(86025, 768)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_pickle(f'{data_path}/data_pre.pkl')\n",
-    "\n",
-    "sentences = [df.originalTitle[x] for x in range(df.shape[0])]\n",
-    "sentences[:10]"
+    "sentence_embeddings.shape"
    ]
   },
   {
@@ -831,16 +860,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_index(data):\n",
-    "    encoded_data = model.encode(data)\n",
-    "    encoded_data = np.asarray(encoded_data.astype('float32'))\n",
+    "def generate_index():\n",
     "    index = faiss.IndexIDMap(faiss.IndexFlatIP(768))\n",
     "    ids = np.array(range(0, len(data)))\n",
     "    ids = np.asarray(ids.astype('int64'))\n",
-    "    index.add_with_ids(encoded_data, ids)\n",
+    "    index.add_with_ids(sentence_embeddings, ids)\n",
     "    faiss.write_index(index, f'{data_path}/sentences.index')\n",
     "\n",
-    "generate_index(sentences)"
+    "generate_index()"
    ]
   },
   {
@@ -852,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,15 +888,13 @@
     "    query_vector = model.encode([query])\n",
     "    k = 5\n",
     "    top_k = index.search(query_vector, k)\n",
-    "    return top_k[1].tolist()[0]\n",
-    "\n",
-    "query = \"Space Fights with no sound\"\n",
-    "results = search(query)"
+    "    results = top_k[1].tolist()[0]\n",
+    "    return df.iloc[results]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -904,92 +929,136 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>47639</th>\n",
-       "      <td>tt7174122</td>\n",
+       "      <th>5053</th>\n",
+       "      <td>tt15156420</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Violent Space</td>\n",
-       "      <td>Violent Space</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>83</td>\n",
-       "      <td>Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72844</th>\n",
-       "      <td>tt4782322</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Fighting the Sky</td>\n",
-       "      <td>Fighting the Sky</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>97</td>\n",
-       "      <td>Action,Sci-Fi,Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20555</th>\n",
-       "      <td>tt2328745</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Space Warriors</td>\n",
-       "      <td>Space Warriors</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>93</td>\n",
-       "      <td>Adventure,Family</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1791</th>\n",
-       "      <td>tt14371272</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Sound and Silence</td>\n",
-       "      <td>Sound and Silence</td>\n",
-       "      <td>2020</td>\n",
+       "      <td>Space</td>\n",
+       "      <td>Space</td>\n",
+       "      <td>2016</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Mystery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13362</th>\n",
+       "      <td>tt1858536</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Space</td>\n",
+       "      <td>Space</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>82</td>\n",
+       "      <td>Comedy,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31272</th>\n",
+       "      <td>tt8710832</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>Space</td>\n",
+       "      <td>Space</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Horror,Sci-Fi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26305</th>\n",
+       "      <td>tt7673996</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>The Space</td>\n",
+       "      <td>The Space</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>70</td>\n",
        "      <td>Drama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44337</th>\n",
-       "      <td>tt6543082</td>\n",
+       "      <th>79005</th>\n",
+       "      <td>tt10613176</td>\n",
        "      <td>movie</td>\n",
-       "      <td>Space Race</td>\n",
-       "      <td>Space Race</td>\n",
-       "      <td>2013</td>\n",
+       "      <td>Space Baby</td>\n",
+       "      <td>Space Baby</td>\n",
+       "      <td>2021</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Animation</td>\n",
+       "      <td>Family,Fantasy,Sci-Fi</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           tconst titleType       primaryTitle      originalTitle  startYear  \\\n",
-       "47639   tt7174122     movie      Violent Space      Violent Space       2018   \n",
-       "72844   tt4782322     movie   Fighting the Sky   Fighting the Sky       2018   \n",
-       "20555   tt2328745     movie     Space Warriors     Space Warriors       2013   \n",
-       "1791   tt14371272     movie  Sound and Silence  Sound and Silence       2020   \n",
-       "44337   tt6543082     movie         Space Race         Space Race       2013   \n",
+       "           tconst titleType primaryTitle originalTitle  startYear  \\\n",
+       "5053   tt15156420     movie        Space         Space       2016   \n",
+       "13362   tt1858536     movie        Space         Space       2011   \n",
+       "31272   tt8710832     movie        Space         Space       2020   \n",
+       "26305   tt7673996     movie    The Space     The Space       2018   \n",
+       "79005  tt10613176     movie   Space Baby    Space Baby       2021   \n",
        "\n",
-       "      runtimeMinutes                  genres  \n",
-       "47639             83                Thriller  \n",
-       "72844             97  Action,Sci-Fi,Thriller  \n",
-       "20555             93        Adventure,Family  \n",
-       "1791             NaN                   Drama  \n",
-       "44337            NaN               Animation  "
+       "      runtimeMinutes                 genres  \n",
+       "5053             NaN                Mystery  \n",
+       "13362             82           Comedy,Drama  \n",
+       "31272             93          Horror,Sci-Fi  \n",
+       "26305             70                  Drama  \n",
+       "79005            NaN  Family,Fantasy,Sci-Fi  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[results]"
+    "#query = \"Space Fights with no sound\"\n",
+    "query = input()\n",
+    "search(query)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Discussão dos Resultados\n",
+    "# Validação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<faiss.swigfaiss.IndexIDMap; proxy of <Swig Object of type 'faiss::IndexIDMapTemplate< faiss::Index > *' at 0x7f7294578de0> >"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = faiss.read_index(f'{data_path}/sentences.index')\n",
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'I' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_22685/3725397367.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m768\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mvecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreconstruct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'I' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "vecs = np.zeros((5, 768))\n",
     "\n",
-    "- Comparação de metodos e modelos\n",
-    "- Criar gráficos"
+    "for i, val in enumerate(I[0].tolist()):\n",
+    "    vecs[i, :] = index.reconstruct(val)"
    ]
   }
  ],
